--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: home
 ---
 
-<h1 id="Xu-(Lexi)-Liu">Xu (Lexi) Liu</h1>
+<h1 id="Xu-(Lexi)-LIU">Xu (Lexi) LIU</h1>
 <p>I am an M.Phil. student in Risk Management Science in the <a href="https://www.sta.cuhk.edu.hk">Department of Statistics</a> at the <a href="https://www.cuhk.edu.hk/english/index.html">Chinese University of Hong Kong</a>. I am doing research under the supervision of <a href="https://sites.google.com/site/kwchankeith/home?authuser=0">Prof. Kin Wai CHAN</a>. My research interests include long-run variance estimation of time series.</p>
 <h2 id="education-background">Education Background</h2>
 <ul>
